@@ -89,4 +89,34 @@ def test_math_operations():
     z_fxp = x_fxp // c
     assert z_fxp() == z
 
+def test_complex_repr():
+    c_fxp = Fxp(1 + 1j*15)
+    assert c_fxp.bin() == '00001+01111j'
+    assert c_fxp.hex() == '0x01+0x0Fj'
+    assert c_fxp.base_repr(base=2) == '1+1111j'
+    assert c_fxp.base_repr(base=10) == '1+15j'
+    assert c_fxp.base_repr(base=16) == '1+Fj'
+
+    c_fxp = Fxp(3.5 - 1j*0.25)
+    assert c_fxp.bin() == '01110+11111j'
+    assert c_fxp.bin(frac_dot=True) == '011.10+111.11j'
+    assert c_fxp.hex() == '0x0E+0x1Fj'
+    assert c_fxp.base_repr(base=2) == '1110-1j'
+    assert c_fxp.base_repr(base=2, frac_dot=True) == '11.10-.01j'
+    assert c_fxp.base_repr(base=10) == '14-1j'
+    assert c_fxp.base_repr(base=16) == 'E-1j'
+
+    c_fxp = Fxp(12 - 1j*1)
+    assert c_fxp.bin() == '01100+11111j'
+    assert c_fxp.hex() == '0x0C+0x1Fj'
+    assert c_fxp.base_repr(base=2) == '1100-1j'
+    assert c_fxp.base_repr(base=10) == '12-1j'
+    assert c_fxp.base_repr(base=16) == 'C-1j'
+
+    arr_fxp = Fxp(np.array([[1 + 1j*2, 2 - 1j*3]]))
+    assert np.all(arr_fxp.bin() == np.array(['001+010j', '010+101j']))
+    assert np.all(arr_fxp.hex() == np.array(['0x1+0x2j', '0x2+0x5j']))
+    assert np.all(arr_fxp.base_repr(base=2) == np.array(['1+10j', '10-11j']))
+    assert np.all(arr_fxp.base_repr(base=10) == np.array(['1+2j', '2-3j']))
+    assert np.all(arr_fxp.base_repr(base=16) == np.array(['1+2j', '2-3j']))
 
