@@ -1,6 +1,8 @@
 version 0.4.6
 --------------------------------------------------
 * Fix complex `truediv` and `floordiv` methods (issue #53).
+* Fix complex binary, hexadecimal and base representation for arrays (issue #56).
+* Tests updates for complex representations.
 
 version 0.4.5
 --------------------------------------------------
